cambio para poder usar git hub

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,4 @@
-body{color:#ea1616;text-align:center;font-family:Courier;font-size:16px;margin:0;padding:0}
+body{color:#16ea9c;text-align:center;font-family:Courier;font-size:16px;margin:0;padding:0}
 #container{width:70%;padding:1em;text-align:left;border:1px solid #ddd;margin:0 auto}
 #container h1{font-size:20px}
 #cabecera{
