una version del local para probar ssh

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@ body{color:#16ea9c;text-align:center;font-family:Courier;font-size:16px;margin:0
 #container{width:70%;padding:1em;text-align:left;border:1px solid #ddd;margin:0 auto}
 #container h1{font-size:20px}
 #cabecera{
-    background: #33A;
+    background: rgb(28, 240, 5);
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
