--- a/style.css
+++ b/style.css
@@ -4,53 +4,102 @@
     padding: 0;
 }
 
+:root {
+  --color-principal: #4CAF50;
+  --color-secundario: #ffffff;
+  --color-terciario: rgb(255, 149, 0);
+  --navbar-texto:'Montserrat';
+  --navbar-texto-tamano: 18px;
+  --navbar-texto-animacion: 20px;
+}
+
+header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 .navbar{
 
-     position: fixed;
+      position: fixed;
       top: 0;
       width: 100%;
       color: white;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       padding: 10px 20px;
       box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.36);
       background-color: rgba(255, 255, 255, 0.8);
-     border-bottom-left-radius: 10px;
-     border-bottom-right-radius: 10px;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
       z-index: 1000;
 
+}
+.navbar_menu a{
+  font-family: var(--navbar-texto);
+  font-size: var(--navbar-texto-tamano);
+  color: var(--color-terciario);
+  margin-left: 5px;
+  font-weight: bold;
+  text-decoration: none;
+  margin-left: 100px;
+}
+
+
+.navbar_menu a:hover{
+  color: var(--color-principal);
+  text-decoration: underline;
+  font-size: var(--navbar-texto-animacion);
+}
+
+.navbar_menu svg{
+  fill: var(--color-terciario);
+  width: 25px;
+  height: 25px;
+}
+
+.navbar_menu svg:hover{
+  fill: var(--color-principal);
+  width: 35px;
+  height: 35px;
+}
+
+.navbar_menu{
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 .logo_navbar{
   width: 100px;
   height: 90px;
-  padding-top: 2px;
 }
 
 .logo_navbar img{
   width: 100%;
   height: 100%;
+  transform: scale(1.5);
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .navbar h1 {
       margin: 0;
       font-size: 20px;
       color: black;
-    }
-
-    .navbar a {
-      color: rgb(255, 149, 0);
-      text-decoration: none;
-      margin-left: 15px;
-      font-weight: bold;
-    }
+}
 
 .Contenedor_imagenes{
     width: 100%;
-    height: 500px;
+    height: 650px;
     overflow: hidden;
+   border-bottom-left-radius: 10px;
+   border-bottom-right-radius: 10px;
+    display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .Contenedor_imagenes img{
