--- a/style.css
+++ b/style.css
@@ -128,6 +128,8 @@ header{
 
 /*Inicio del Main*/
 
+
+/*quienes somos*/
 .main-container {
   width: 100%;
 }
@@ -153,12 +155,17 @@ header{
 }
 
 .quienes-somos .texto h2 {
-  font-size: 32px;
+  font-family: var(--navbar-texto);
+  font-weight: 700;
+  color: var(--color-principal);
+  font-size: 48px;
   margin-bottom: 20px;
 }
 
 .quienes-somos .texto p {
-  font-size: 16px;
+  font-family: var(--navbar-texto);
+  font-weight: 500;
+  font-size: 18px;
   line-height: 1.6;
 }
 
@@ -173,5 +180,252 @@ header{
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
+/* fin quienes somos*/
+
+/*catalogo*/
+
+.seccion_catalogo{
+  padding: 60px 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.texto_catalogo{
+  text-align: center;
+}
+
+.texto_catalogo h2{
+  font-family: var(--navbar-texto);
+  font-weight: 700;
+  color: var(--color-principal);
+  font-size: 48px;
+  text-align: center;
+}
+
+.catalogo-container {
+  padding: 50px 16px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.catalogo {
+  width: 100%;
+  display: grid;
+  grid-row: auto;
+  grid-template-columns: repeat(4,1fr);
+  gap: 20px;
+  row-gap: 20px;
+  margin-bottom: 20px;
+  
+}
+
+.item {
+  background: #f2f2f2;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+/*productos*/
+ .product-card {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .product-card img {
+    width: 240px;
+    height: 240px;
+    border-radius: 20px;
+    object-fit: cover;
+  }
+  .cards-container .product-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+    background-color: var(--hospital-green);
+    border-radius: 4px;
+  }
+  .cards-container .product-info figure {
+    margin: 0;
+  }
+  .cards-container .product-info figure img {
+    width: 35px;
+    height: 35px;
+  }
+  .cards-container .product-info div p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 4px;
+  }
+  .cards-container .product-info div p:nth-child(2) {
+    font-weight: bold;
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 0;
+    color: var(--black);
+  }
+
+  /*detalles del producto*/
+  .product-detail-close {
+    background: var(--white);
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    z-index: 2;
+    padding: 12px;
+    border-radius: 50%;
+  }
+  #product-detail-close:hover {
+    cursor: pointer;
+  }
+  #product-detail > img:nth-child(2) {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+  }
+  #product-detail .product-info {
+    margin: 24px 24px 0 24px;
+  }
+  #product-detail .product-info p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 4px;
+  }
+  #product-detail .product-info p:nth-child(2) {
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 36px;
+  }
+  #product-detail .product-info p:nth-child(3) {
+    color: var(--very-light-pink);
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 36px;
+  }
+  .primary-button {
+    background-color: var(--hospital-green);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+  }
+  .add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+/*detalles del producto*/
+
+/*fin productos*/
+
+/*Paginacion catalogo*/
+.catalogo_paginacion{
+  margin-top: 40px;
+  display: flex;
+  flex-direction: row;
+}
+
+.paginacion button {
+  margin: 5px;
+  padding: 8px 12px;
+  border: none;
+  background: #4caf50;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* .paginacion button.active {
+  background: #388e3c;
+} */
+
+.catalogo_paginacion button {
+  background-color: #fff;
+  color: black;
+  border: none;
+  padding: 8px 16px;
+  font-size: 13px;
+  cursor: pointer;
+  border-radius: 100%;
+}
+
+.catalogo_paginacion button:hover {
+  color: var(--color-terciario);
+  text-decoration: underline;
+  font-size: 16px;
+}
+
+
+#anterior::before {
+  font-family: "Font Awesome 6 Free";
+  content: "\f104";
+  font-weight: 900; /* necesario para íconos sólidos */
+  font-size: 15px;
+  color: black;
+}
+
+#siguiente::before {
+  font-family: "Font Awesome 6 Free";
+  content: "\f105";
+  font-weight: 900; /* necesario para íconos sólidos */
+  font-size: 15px;
+  color: black;
+}
+
+#anterior:hover {
+  background-color: var(--color-terciario);
+}
+
+#siguiente:hover {
+  background-color: var(--color-terciario);
+}
+/*fin paginacion Catalogo*/
+
+/*Punto de venta*/
+
+.seccion_punto_venta{
+  padding: 60px 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.texto_punto_venta{
+  text-align: center;
+}
+
+.texto_punto_venta h2{
+  font-family: var(--navbar-texto);
+  font-weight: 700;
+  color: var(--color-principal);
+  font-size: 48px;
+  text-align: center;
+}
+
+.mapa_punto_venta{
+  padding: 50px 16px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 
 /*fin del Main*/
