--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ header{
 
 .Contenedor_imagenes{
     width: 100%;
-    height: 650px;
+    height: 100%;
     overflow: hidden;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
@@ -246,7 +246,7 @@ header{
   grid-row: auto;
   grid-template-columns: repeat(4,1fr);
   gap: 20px;
-  row-gap: 20px;
+  row-gap: 60px;
   margin-bottom: 20px;
   
 }
@@ -270,21 +270,42 @@ header{
     height: 240px;
     border-radius: 20px;
     object-fit: cover;
+    margin: 20px 20px 0px 20px;
   }
   .cards-container .product-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 12px;
-    background-color: var(--hospital-green);
+    background-color: var(--color-secundario);
     border-radius: 4px;
+    
   }
 
-  .product-info p{
+  /* .product-info {
+    margin-top: 10px;
+    background-color: rgba(0, 0, 0, 0.201);
+    width: 240px;
+    border-radius: 5px;
+  } */
+
+  .product-info .product-info-Name{
     font-family: var(--navbar-texto);
     font-weight: 500;
     font-size: 15px;
-    color: var(--color-secundario);
+    /* color: var(--color-secundario); */
+    color: rgb(255, 255, 255);
+    margin-top: 10px;
+  }
+
+  .product-info .product-info-price{
+    font-family: var(--navbar-texto);
+    font-weight: 500;
+    font-size: 15px;
+    /* color: var(--color-secundario); */
+    color: rgb(255, 255, 255);
+    margin-top: 5px;
+    margin-bottom: 20px;
   }
 
   .cards-container .product-info figure {
@@ -306,6 +327,18 @@ header{
     margin-top: 0;
     margin-bottom: 0;
     color: var(--color-secundario);
+  }
+
+  .product-card:hover {
+    
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 20px;
+  }
+
+  .product-card img:hover{
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25);
+    transition: transform 0.3s, box-shadow 0.3s;
+    filter: contrast(110%) brightness(105%);
   }
 
   /*detalles del producto*/
@@ -496,6 +529,14 @@ header{
   text-align: center;
   color: rgb(255, 255, 255);
   margin-top: 10px;
+}
+
+.burbuja_whatsapp {
+    position: fixed;
+    right: 20px;
+    bottom: 24px;
+    z-index: 1000;
+    cursor: pointer;
 }
 /*fin del Main*/
 
