--- a/style.css
+++ b/style.css
@@ -673,3 +673,16 @@ footer{
   font-size: 18px;
 }
 /*Fin footer*/
+
+
+.fade-in-section {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+  will-change: opacity, transform;
+}
+
+.fade-in-section.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
