--- a/style.css
+++ b/style.css
@@ -115,20 +115,23 @@ header{
       color: black;
 }
 
-.Contenedor_imagenes{
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-   border-bottom-left-radius: 10px;
-   border-bottom-right-radius: 10px;
-    display: flex;
+.Contenedor_imagenes {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.Contenedor_imagenes img{
-    width: 100%;
-    height: 100%;
+.Contenedor_imagenes img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover	;  /* Cambia de 'cover' a 'contain' para evitar recortes */
+  object-position: center;
+  display: block;
 }
 
 
@@ -686,3 +689,4 @@ footer{
   opacity: 1;
   transform: translateY(0);
 }
+
